--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                         <a class="nav-link" href="#Acerca-de-mi">Acerca de mí</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#Educacion">Formación</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#Mis-trabajos">Trabajos</a>
                     </li>
                     <li class="nav-item">
@@ -63,7 +66,7 @@
         </div>
     </header>
 
-
+    
     <section id="Acerca-de-mi" class="container text-center my-5">
 
 
@@ -101,7 +104,30 @@
             </div>
         </div>
     </section>
-
+    <section id="Educacion" class="container py-5">
+        <h2 class="display-3 fw-bold my-4 text-center">Formación</h2>          
+        <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Título</th>
+                <th scope="col">Institución</th>
+                <th scope="col">Año</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Profesor de Castellano y Licenciado en Educación</td>
+                <td>Universidad Metropolitana de Ciencias de la Educación</td>
+                <td>2011</td>
+              </tr>
+              <tr>
+                <td>Diplomado Universitario en Diseño Didáctico Instruccional para E-Learning</td>
+                <td>Universidad Tecnológica Nacional de Buenos Aires a través de Net-Learning</td>
+                <td>2011</td>
+              </tr>
+            </tbody>
+          </table>
+    </section>
 
     <section id="Mis-trabajos" class="my-5 p-5 custom_section_mis-trabajos">
 
