--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
     </nav>
 
-    <header id="Hero-Section" class="text-light text-end py-5 mt-5">
+    <header id="Hero-Section" class="text-dark text-end py-5 mt-5">
         <div class="container">
             <div class="ms-auto col-12 col-md-9 ">
                 <h1 class="display-1 fw-bold my-5">
@@ -59,8 +59,8 @@
                     Actualmente estoy comenzando a incursionar en el desarrollo web.
                 </p>
                 <div class="mb-5 pb-5">
-                    <a class="btn btn-lg btn-outline-info text-light me-4" href=#Mis-trabajos>Trabajos</a>
-                    <a class="btn btn-lg btn-outline-info text-light" href=#Contacto>Contacto</a>
+                    <a class="btn btn-lg btn-outline-info text-dark me-4" href=#Mis-trabajos>Trabajos</a>
+                    <a class="btn btn-lg btn-outline-info text-dark" href=#Contacto>Contacto</a>
                 </div>
             </div>
         </div>
