contorno blanco h1 /text-shadow

--- a/index.html
+++ b/index.html
@@ -51,20 +51,21 @@
     <header id="Hero-Section" class="text-dark text-end py-5 mt-5">
         <div class="container">
             <div class="ms-auto col-12 col-md-9 ">
-                <h1 class="display-1 fw-bold my-5">
+                <h1 class="display-1 fw-bold my-5" style="text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.8);">
                     Carlos Valderas<br>Diseñador Instruccional<br>Desarrollador
                 </h1>
-                <p class="my-5">
-                    Profesor de castellano y deseñador instruccional. <br>
+                <p class="my-5" style="text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.8);">
+                    Profesor de castellano y diseñador instruccional. <br>
                     Actualmente estoy comenzando a incursionar en el desarrollo web.
                 </p>
                 <div class="mb-5 pb-5">
-                    <a class="btn btn-lg btn-outline-info text-dark me-4" href=#Mis-trabajos>Trabajos</a>
-                    <a class="btn btn-lg btn-outline-info text-dark" href=#Contacto>Contacto</a>
+                    <a class="btn btn-lg btn-outline-info text-dark me-4" href=#Mis-trabajos style="text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.8);">Trabajos</a>
+                    <a class="btn btn-lg btn-outline-info text-dark" href=#Contacto style="text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.8);">Contacto</a>
                 </div>
             </div>
         </div>
     </header>
+    
 
     
     <section id="Acerca-de-mi" class="container text-center my-5">
